# llm-applied-research

./: README.md  requirements.txt
agent-project/: README.md  environment.yml  idle_shutdown.sh  main.py  pyproject.toml  server.py  setup_llm.sh
agent-project/src/agent_project/application/: training_service.py
agent-project/src/agent_project/core/: dataset.py  modeling.py
agent-project/src/agent_project/infrastructure/: hf_hub.py
agent-project/tools/: finetune_agent_llm.py
post_training/: README.md
post_training/dpo/: direct_optimization_preference.py  direct_preference_optimization.py
post_training/online_rl/: online_reinforcement_learning.py
post_training/rft/: llm_reward_evaluator.py  wordle_fine_tuning.py  wordle_sft_grpo_local.py
post_training/sft/: supervised_fine_tuning.py
